--- a/index.html
+++ b/index.html
@@ -19,34 +19,6 @@
 </head>
 
 <body>
-    <!--======== Navbar =======-->
-    <div class="top-bar">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="navbar-menu-left-side239">
-                        <ul>
-                            <li><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a></li>
-                            <li><a href="#"><i class="fa fa-headphones" aria-hidden="true"></i>Support</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="navbar-serch-right-side">
-                        <form class="navbar-form" role="search">
-                            <div class="input-group add-on">
-                                <input class="form-control form-control222" placeholder="Search" id="srch-term" type="text">
-                                <div class="input-group-btn">
-                                    <button class="btn btn-default btn-default2913" type="button"><i class="glyphicon glyphicon-search"></i></button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    
     
     <!-- ==========header mega navbar=======-->
     <div class="top-menu-bottom932">
@@ -62,7 +34,7 @@
                     <ul class="nav navbar-nav"> </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="ask_question.html">Ask Question</a></li>
+                        <li><a href="ask_question.html">Post Thread</a></li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Question <span class="caret"></span></a>
                             <ul class="dropdown-menu animated zoomIn">
                                 <li><a href="category.html">Question Category</a></li>                                
@@ -73,7 +45,7 @@
                             <ul class="dropdown-menu animated zoomIn">
                                 <li><a href="logIn.html">Login</a></li>
                                 <li><a href="contact_us.html"> Contact Us</a></li>
-                                <li><a href="ask_question.html"> Ask Question </a></li>
+                                <li><a href="ask_question.html"> Post Thread </a></li>
                                 <li><a href="post-deatils.html"> Post-Details </a></li>
                                 <li><a href="user.html">All User</a></li>
                                 <li><a href="user_question.html"> User Question </a></li>
@@ -95,7 +67,7 @@
         <div class="container">
             <div class="welcome-demop102 text-center">
                 <h2>Welcome to Hikers</h2>
-                <p>Placeholder Text</p>
+                <p>Community Portal And Route Plan Saver for hikers and wild adventurers alike!</p>
                 <!-- <div class="button0239-item">
                     <a href="#">
                         <button type="button" class="aboutus022">About Us</button>
@@ -146,7 +118,7 @@
                                     <div class="col-md-1 d-inline-flex flex-column">
                                         <div class="left-user12923 left-user12923-repeat">
                                             <a href="#"><img src="image/images.png" alt="image"> </a> 
-                                            <div class="d-inline-flex justify-content-center">
+                                            <div class="mt-2">
                                                 <a href="#"><i class="glyphicon glyphicon-chevron-up" aria-hidden="true"></i></a> 
                                                 <a href="#"><i class="glyphicon glyphicon-chevron-down" style="color: red;" aria-hidden="true"></i></a> 
                                             </div>                                           
