--- a/logIn.html
+++ b/logIn.html
@@ -2,12 +2,10 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="title" content="Ask online Form">
-  <meta name="description"
-    content="The Ask is a bootstrap design help desk, support forum website template coded and designed with bootstrap Design, Bootstrap, HTML5 and CSS. Ask ideal for wiki sites, knowledge base sites, support forum sites">
-  <meta name="keywords"
-    content="HTML, CSS, JavaScript,Bootstrap,js,Forum,webstagram ,webdesign ,website ,web ,webdesigner ,webdevelopment">
+  <meta charset="utf-8">
+  <meta name="title" content="Hikers">
+  <meta name="description" content="Hikers is an online portal forum for hikers and mountain adventurers with the addition of saving your hiking routes via Google Maps and share it with everyone">
+  <meta name="keywords" content="hiking, community, forum, hiking-route, hiking-planner">
   <meta name="robots" content="index, nofollow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
@@ -24,7 +22,7 @@
     <div class="modal-bodies">
       <div class="modal-body modal-body-step-1 is-showing">
         <div class="title">Log In</div>
-        <div class="description">Hello there, Log In</div>
+        <div class="description">Hello there, Log In to Hikers</div>
         <div id="response">
           <p></p>
         </div>
