--- a/signup.html
+++ b/signup.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html >
 <head>
-  <meta charset="UTF-8">
-  <meta name="title" content="Ask online Form">
-  <meta name="description" content="The Ask is a bootstrap design help desk, support forum website template coded and designed with bootstrap Design, Bootstrap, HTML5 and CSS. Ask ideal for wiki sites, knowledge base sites, support forum sites">
-  <meta name="keywords" content="HTML, CSS, JavaScript,Bootstrap,js,Forum,webstagram ,webdesign ,website ,web ,webdesigner ,webdevelopment">
+  <meta charset="utf-8">
+  <meta name="title" content="Hikers">
+  <meta name="description" content="Hikers is an online portal forum for hikers and mountain adventurers with the addition of saving your hiking routes via Google Maps and share it with everyone">
+  <meta name="keywords" content="hiking, community, forum, hiking-route, hiking-planner">
   <meta name="robots" content="index, nofollow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
+  <title>Hikers - Login</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
    <link rel="stylesheet" href="css/loginstyle.css">
@@ -22,7 +23,7 @@
   <div class="modal-bodies">
     <div class="modal-body modal-body-step-1 is-showing">
       <div class="title">Sign Up</div>
-      <div class="description">Hello there, Register Form</div>
+      <div class="description">Hello there, Register to Hikers</div>
       <form>
         <input type="text" placeholder="Username*"/>
         <input type="email" placeholder="E-Mail*"/>
@@ -31,8 +32,8 @@
                <div class="col-md-4">
                         <div class="row text-center sign-with">
                             <div class="col-md-12">
-                                <h3>
-                                    Sign in with</h3>
+                                <a href="logIn.html"><span>Already has an account? Log in here.</span></a>
+                                <h3>Sign in with</h3>
                             </div>
                             <div class="col-md-12 sign-in28912">
                                 <div class="btn-group btn-group-justified">
