--- a/ask_question.html
+++ b/ask_question.html
@@ -23,39 +23,6 @@
 </head>
 
 <body>
-<<<<<<< HEAD
-=======
-    <div class="top-bar">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="navbar-menu-left-side239">
-                        <ul>
-                            <li><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a></li>
-                            <li><a href="#"><i class="fa fa-headphones" aria-hidden="true"></i>Support</a></li>
-                            <li><a href="logIn.html"><i class="fa fa-user" aria-hidden="true"></i>Login Area</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="navbar-serch-right-side">
-                        <form class="navbar-form" role="search">
-                            <div class="input-group add-on">
-                                <input class="form-control form-control222" placeholder="Search" name="srch-term"
-                                    id="srch-term" type="text">
-                                <div class="input-group-btn">
-                                    <button class="btn btn-default btn-default2913" type="submit"><i
-                                            class="glyphicon glyphicon-search"></i></button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
->>>>>>> 4f09f89aa4a04d38bd980c35f5893f03e4e844f7
     <div class="top-menu-bottom932">
         <nav class="navbar navbar-default">
             <div class="container">
@@ -73,14 +40,8 @@
                     <ul class="nav navbar-nav"> </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
-<<<<<<< HEAD
                         <li><a href="ask_question.html">Post Thread</a></li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Question <span class="caret"></span></a>
-=======
-                        <li><a href="ask_question.html">Ask Question</a></li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                aria-haspopup="true" aria-expanded="false">Question <span class="caret"></span></a>
->>>>>>> 4f09f89aa4a04d38bd980c35f5893f03e4e844f7
                             <ul class="dropdown-menu animated zoomIn">
                                 <li><a href="category.html">Question Category</a></li>
                                 <li><a href="category.html">HTML</a></li>
@@ -127,7 +88,10 @@
                     <div class="ask-question-input-part032">
                         <h4>Post Thread</h4>
                         <hr>
-                        <form>
+                        <form action="index.html" method="POST" onsubmit="return ask_question(event)">
+                            <div id="response">
+                                <p></p>
+                            </div>
                             <div class="question-title39">
                                 <span class="form-description433">Question-Title* </span>
                                 <input type="text" name="fname" class="question-ttile32" placeholder="Write Your Question Title">
@@ -152,64 +116,11 @@
                                     <textarea id="txtEditor"></textarea> 
                                 </div>
                             </div>	
-                        
-                        </form>
-                        <div class="publish-button2389">
-                            <button type="button" class="publis1291">Publish Thread</button>
-                        </div>                
-                    </div>              
-                        <h4>Ask Question</h4>
-                        <hr>
-                        <form action="" method="POST" onsubmit="return ask_question(event)">
-                            <div id="response">
-                                <p></p>
-                            </div>
-                            <div class="username-part940">
-                                <span class="form-description43">User name* </span><input type="text" id="fname"
-                                    name="fname" class="username029" placeholder="Enter your Name" >
-                            </div>
-                            <div class="email-part320">
-                                <span class="form-description442">E-Mail* </span><input type="text" id="email"
-                                    name="email" class="email30" placeholder="Enter Your Email" >
-                            </div>
-                            <div class="question-title39">
-                                <span class="form-description433">Question-Title* </span><input type="text"
-                                    id="question_title" name="question-title" class="question-ttile32"
-                                    placeholder="Write Your Question Title" >
-                            </div>
-
-                            <div class="categori49">
-                                <span class="form-description43305">Category* </span>
-                                <label>
-                                    <input list="browsers" id="category" name="myBrowser" class="list-category53"
-                                        /></label>
-                                <datalist id="browsers">
-                                    <option value="Front_End Web Developer">
-                                    <option value="Back-End develoer">
-                                    <option value="Andriod Developer">
-                                    <option value="Web Application">
-                                    <option value="System Analyst">
-                                    <option value="Security">
-                                </datalist>
-                            </div>
-                            <div class="button-group-addfile3239">
-                                <span class="form-description23993">Attactment*</span><input type="file" name="ffile"
-                                    class="question-ttile3226">
-
-                            </div>
-                            <div class="details2-239">
-                                <div class="col-md-12 nopadding">
-                                    <textarea id="txtEditor" ></textarea>
-                                </div>
-                            </div>
                             <div class="publish-button2389">
-                                <button type="submit" id="btn_submit" class="publis1291">Publish your Question</button>
-                            </div>
-                        </form>
-
-
+                                <button type="submit" class="publis1291">Publish Thread</button>
+                            </div>    
+                        </form>                                                
                     </div>
-
 
                 </div>
                 <!--                end of col-md-9 -->
