--- a/contact_us.html
+++ b/contact_us.html
@@ -30,14 +30,10 @@
                     <ul class="nav navbar-nav"> </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="ask_question.html">Ask Question</a></li>
+                        <li><a href="ask_question.html">Post Thread</a></li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Question <span class="caret"></span></a>
                             <ul class="dropdown-menu animated zoomIn">
-                                <li><a href="category.html">Question Category</a></li>
-                                <li><a href="category.html">HTML</a></li>
-                                <li><a href="category.html">CSS</a></li>
-                                <li><a href="category.html">Javascript</a></li>
-                                <li><a href="category.html">Bootstrap</a></li>
+                                <li><a href="category.html">Question Category</a></li>                                
                             </ul>
                         </li>
                        
@@ -45,7 +41,7 @@
                             <ul class="dropdown-menu animated zoomIn">
                                 <li><a href="logIn.html">Login</a></li>
                                 <li><a href="contact_us.html"> Contact Us</a></li>
-                                <li><a href="ask_question.html"> Ask Question </a></li>
+                                <li><a href="ask_question.html"> Post Thread </a></li>
                                 <li><a href="post-deatils.html"> Post-Details </a></li>
                                 <li><a href="user.html">All User</a></li>
                                 <li><a href="user_question.html"> User Question </a></li>
