refactor: post thread

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    
+
     <!-- ==========header mega navbar=======-->
     <div class="top-menu-bottom932">
         <nav class="navbar navbar-default">
@@ -34,7 +34,7 @@
                     <ul class="nav navbar-nav"> </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="ask_question.html">Post Thread</a></li>
+                        <li><a href="post-thread.html"> Post Thread </a></li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Question <span class="caret"></span></a>
                             <ul class="dropdown-menu animated zoomIn">
                                 <li><a href="category.html">Question Category</a></li>
@@ -45,7 +45,7 @@
                             <ul class="dropdown-menu animated zoomIn">
                                 <li><a href="logIn.html">Login</a></li>
                                 <li><a href="contact_us.html"> Contact Us</a></li>
-                                <li><a href="ask_question.html"> Post Thread </a></li>
+                                <li><a href="post-thread.html"> Post Thread </a></li>
                                 <li><a href="post-deatils.html"> Post-Details </a></li>
                                 <li><a href="user.html">All User</a></li>
                                 <li><a href="user_question.html"> User Question </a></li>
@@ -115,12 +115,12 @@
                                 <div class="row">
                                     <div class="col-md-1 d-inline-flex flex-column">
                                         <div class="left-user12923 left-user12923-repeat">
-                                            <a href="#"><img src="image/images.png" alt="image"> </a> 
+                                            <a href="#"><img src="image/images.png" alt="image"> </a>
                                             <div class="vote-result">
-                                                <!-- <a href="#"><i class="glyphicon glyphicon-chevron-up" aria-hidden="true"></i></a> 
+                                                <!-- <a href="#"><i class="glyphicon glyphicon-chevron-up" aria-hidden="true"></i></a>
                                                 <a href="#"><i class="glyphicon glyphicon-chevron-down" style="color: red;" aria-hidden="true"></i></a> -->
-                                                <span>18</span>    
-                                            </div>                                           
+                                                <span>18</span>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-md-9">
@@ -135,9 +135,9 @@
                                                     While we don’t recommend having a canned response for every interview question (in fact, please don’t), we do recommend spending some time getting comfortable with what you might be asked, what hiring managers are really looking for in your responses, and what it takes to show that you’re the right person for the job.</p>
                                             </div>
                                             <hr>
-                                            <div class="ques-icon-info3293"> 
-                                                <a href="#"><i class="fa fa-comment" aria-hidden="true"> 25 </i> </a> 
-                                                <a href="#"><i class="fa fa-clock-o" aria-hidden="true"> 4 min ago</i></a> 
+                                            <div class="ques-icon-info3293">
+                                                <a href="#"><i class="fa fa-comment" aria-hidden="true"> 25 </i> </a>
+                                                <a href="#"><i class="fa fa-clock-o" aria-hidden="true"> 4 min ago</i></a>
                                                 <a href="#"><i class="fa fa-share-alt" aria-hidden="true"> Share</i></a>
                                                 <a href="#"><i class="fa fa-bug" aria-hidden="true"> Report</i></a> </div>
                                         </div>
