--- a/post-thread.html
+++ b/post-thread.html
@@ -40,7 +40,7 @@
                     <ul class="nav navbar-nav"> </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="ask_question.html">Post Thread</a></li>
+                        <li><a href="post-thread.html"> Post Thread </a></li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                 aria-haspopup="true" aria-expanded="false">Question <span class="caret"></span></a>
                             <ul class="dropdown-menu animated zoomIn">
@@ -57,7 +57,7 @@
                             <ul class="dropdown-menu animated zoomIn">
                                 <li><a href="logIn.html">Login</a></li>
                                 <li><a href="contact_us.html"> Contact Us</a></li>
-                                <li><a href="ask_question.html"> Post Thread </a></li>
+                                <li><a href="post-thread.html"> Post Thread </a></li>
                                 <li><a href="post-deatils.html"> Post-Details </a></li>
                                 <li><a href="user.html">All User</a></li>
                                 <li><a href="user_question.html"> User Question </a></li>
