refactor: file name, ask question page. feat: add js for signup page

--- a/post-thread.html
+++ b/post-thread.html
@@ -13,6 +13,7 @@
     <meta name="robots" content="index, nofollow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
+    <title>Post Thread</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/editor.css" rel="stylesheet" type="text/css">
@@ -55,17 +56,15 @@
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                 aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
                             <ul class="dropdown-menu animated zoomIn">
-                                <li><a href="logIn.html">Login</a></li>
-                                <li><a href="contact_us.html"> Contact Us</a></li>
+                                <li><a href="contact-us.html"> Contact Us</a></li>
                                 <li><a href="post-thread.html"> Post Thread </a></li>
                                 <li><a href="post-deatils.html"> Post-Details </a></li>
                                 <li><a href="user.html">All User</a></li>
-                                <li><a href="user_question.html"> User Question </a></li>
+                                <li><a href="user-details.html"> User Question </a></li>
                                 <li><a href="category.html"> Category </a></li>
-                                <li><a href="#"> 404 </a></li>
                             </ul>
                         </li>
-                        <li><a href="contact_us.html">Contact us</a></li>
+                        <li><a href="contact-us.html"> Contact Us</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
