--- a/contact-us.html
+++ b/contact-us.html
@@ -6,15 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" content="Ask online Form">
-    <meta name="description" content="The Ask is a bootstrap design help desk, support forum website template coded and designed with bootstrap Design, Bootstrap, HTML5 and CSS. Ask ideal for wiki sites, knowledge base sites, support forum sites">
-    <meta name="keywords" content="HTML, CSS, JavaScript,Bootstrap,js,Forum,webstagram ,webdesign ,website ,web ,webdesigner ,webdevelopment">
+    <meta name="description"
+        content="The Ask is a bootstrap design help desk, support forum website template coded and designed with bootstrap Design, Bootstrap, HTML5 and CSS. Ask ideal for wiki sites, knowledge base sites, support forum sites">
+    <meta name="keywords"
+        content="HTML, CSS, JavaScript,Bootstrap,js,Forum,webstagram ,webdesign ,website ,web ,webdesigner ,webdevelopment">
     <meta name="robots" content="index, nofollow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <!-- <link href="css/animate.css" rel="stylesheet" type="text/css"> -->
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"> </head>
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+</head>
 
 <body>
     <div class="top-menu-bottom932">
@@ -22,8 +25,12 @@
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                    <a class="navbar-brand" href="index.html"><img src="image/logo.png" width="101" height="57" alt="Logo"></a>
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle
+                            navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span
+                            class="icon-bar"></span> </button>
+                    <a class="navbar-brand" href="index.html"><img src="image/logo.png" width="101" height="57"
+                            alt="Logo"></a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -31,25 +38,25 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="post-thread.html"> Post Thread </a></li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Question <span class="caret"></span></a>
+                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                aria-haspopup="true" aria-expanded="false">Question <span class="caret"></span></a>
                             <ul class="dropdown-menu animated zoomIn">
                                 <li><a href="category.html">Question Category</a></li>
                             </ul>
                         </li>
 
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
+                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
                             <ul class="dropdown-menu animated zoomIn">
-                                <li><a href="logIn.html">Login</a></li>
-                                <li><a href="contact_us.html"> Contact Us</a></li>
+                                <li><a href="contact-us.html"> Contact Us</a></li>
                                 <li><a href="post-thread.html"> Post Thread </a></li>
                                 <li><a href="post-deatils.html"> Post-Details </a></li>
                                 <li><a href="user.html">All User</a></li>
-                                <li><a href="user_question.html"> User Question </a></li>
+                                <li><a href="user-details.html"> User Question </a></li>
                                 <li><a href="category.html"> Category </a></li>
-                                <li><a href="#"> 404 </a></li>
                             </ul>
                         </li>
-                        <li><a href="contact_us.html">Contact us</a></li>
+                        <li><a href="contact-us.html"> Contact Us</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -59,68 +66,73 @@
     </div>
 
 
-<section class="header-descriptin329">
-                       <div class="container">
-                       <h3>Ask Question</h3>
-                        <ol class="breadcrumb breadcrumb839">
-  <li><a href="#">Home</a></li>
-  <li class="active">Contact US</li>
-</ol>
-    </div>
-</section>
-     <section class="google-map390">
-     <div class="container">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3648.3606635504457!2d90.31952411441043!3d23.876826289853003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c23e9a9dbe81%3A0x62af421e71601a5f!2sDaffodil+International+University+-+Permanent+Campus+Library!5e0!3m2!1sen!2sbd!4v1510023951587" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
-         </div>
-  </section>
+    <section class="header-descriptin329">
+        <div class="container">
+            <h3>Ask Question</h3>
+            <ol class="breadcrumb breadcrumb839">
+                <li><a href="#">Home</a></li>
+                <li class="active">Contact US</li>
+            </ol>
+        </div>
+    </section>
+    <section class="google-map390">
+        <div class="container">
+            <iframe src="https://maps.google.com/maps?q=Jakarta&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%"
+                height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+    </section>
     <section class="main-content920">
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                <div class="ask-question-input-part032">
-                      <h4>Contact Us</h4>
-                 <hr>
-                    <form>
-                    <div class="username-part940">
-                        <span class="form-description43">User name* </span><input type="text" name="fname" class="username029" placeholder="Enter your Name">
- </div>
- <div class="email-part320">
-     <span class="form-description442">E-Mail* </span><input type="text" name="fname" class="email30" placeholder="Enter Your Email">
-                        </div>
-                        <div class="question-title39">
-                            <span class="form-description433">Question-Title* </span><input type="text" name="fname" class="question-ttile32" placeholder="Write Your Question Title">
-                        </div>
-        <div class="question-title39">
-                            <span class="form-description43313">Details* </span>
-<textarea class="question-details3112" placeholder="Type the description thoroughly and in detail .">
+                    <div class="ask-question-input-part032">
+                        <h4>Contact Us</h4>
+                        <hr>
+                        <form>
+                            <div class="username-part940">
+                                <span class="form-description43">User name* </span><input type="text" name="fname"
+                                    class="username029" placeholder="Enter your Name">
+                            </div>
+                            <div class="email-part320">
+                                <span class="form-description442">E-Mail* </span><input type="text" name="fname"
+                                    class="email30" placeholder="Enter Your Email">
+                            </div>
+                            <div class="question-title39">
+                                <span class="form-description433">Question-Title* </span><input type="text" name="fname"
+                                    class="question-ttile32" placeholder="Write Your Question Title">
+                            </div>
+                            <div class="question-title39">
+                                <span class="form-description43313">Details* </span>
+                                <textarea class="question-details3112"
+                                    placeholder="Type the description thoroughly and in detail .">
 
 
                         </textarea>
 
 
+                            </div>
+
+
+                        </form>
+                        <div class="publish-button2389">
+                            <button type="button" class="publis1291">Publish your Question</button>
                         </div>
 
-
-</form>
-                 <div class="publish-button2389">
-                    <button type="button" class="publis1291">Publish your Question</button>
-                </div>
-
-                </div>
+                    </div>
 
 
                 </div>
-<!--                end of col-md-9 -->
+                <!--                end of col-md-9 -->
 
                 <!--start col-md-3 (side bar)-->
                 <aside class="col-md-3 sidebar97239">
                     <div class="categori-part329">
                         <h4>Category</h4>
                         <ul>
-                            <li><a href="#">web developer</a></li>
-                            <li><a href="#">Andriod developer</a></li>
-                            <li><a href="#">grapics developer</a></li>
-                            <li><a href="#">web developer</a></li>
+                            <li><a href="#">Discussion</a></li>
+                            <li><a href="#">Guidance</a></li>
+                            <li><a href="#">Experiences</a></li>
+                            <li><a href="#">Question</a></li>
                         </ul>
                     </div>
 
@@ -143,14 +155,26 @@
                     <!--        start recent post  -->
                     <div class="recent-post3290">
                         <h4>Recent Post</h4>
-                        <div class="post-details021"> <a href="#"><h5>How much do web developers</h5></a>
-                            <p>I am thinking of pursuing web developing as a career & was ...</p> <small style="color: #848991">July 16, 2017</small> </div>
+                        <div class="post-details021"> <a href="#">
+                                <h5>How much do web developers</h5>
+                            </a>
+                            <p>I am thinking of pursuing web developing as a career & was ...</p> <small
+                                style="color: #848991">July 16, 2017</small>
+                        </div>
                         <hr>
-                        <div class="post-details021"> <a href="#"><h5>How much do web developers</h5></a>
-                            <p>I am thinking of pursuing web developing as a career & was ...</p> <small style="color: #848991">July 16, 2017</small> </div>
+                        <div class="post-details021"> <a href="#">
+                                <h5>How much do web developers</h5>
+                            </a>
+                            <p>I am thinking of pursuing web developing as a career & was ...</p> <small
+                                style="color: #848991">July 16, 2017</small>
+                        </div>
                         <hr>
-                        <div class="post-details021"> <a href="#"><h5>How much do web developers</h5></a>
-                            <p>I am thinking of pursuing web developing as a career & was ...</p> <small style="color: #848991">July 16, 2017</small> </div>
+                        <div class="post-details021"> <a href="#">
+                                <h5>How much do web developers</h5>
+                            </a>
+                            <p>I am thinking of pursuing web developing as a career & was ...</p> <small
+                                style="color: #848991">July 16, 2017</small>
+                        </div>
                     </div>
                     <!--       end recent post    -->
                 </aside>
@@ -164,9 +188,10 @@
             <div class="row">
                 <div id="custom-search-input">
                     <div class="input-group col-md-12"> <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                        <input type="text" class="  search-query form-control user-control30" placeholder="Search here...." /> <span class="input-group-btn">
-    <button class="btn btn-danger" type="button">
-        <span class=" glyphicon glyphicon-search"></span> </button>
+                        <input type="text" class="  search-query form-control user-control30"
+                            placeholder="Search here...." /> <span class="input-group-btn">
+                            <button class="btn btn-danger" type="button">
+                                <span class=" glyphicon glyphicon-search"></span> </button>
                         </span>
                     </div>
                 </div>
@@ -179,7 +204,8 @@
                 <div class="col-md-6">
                     <div class="info-part-one320">
                         <h4>Where We Are ?</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi adipiscing gravida odio, sit amet suscipit risus ultrices eu.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi adipiscing gravida odio, sit
+                            amet suscipit risus ultrices eu.</p>
                         <h4>Address :</h4>
                         <p>Ask Me Network, 33 Street, syada
                             <br> Zeinab, Cairo, Egypt.</p>
@@ -228,7 +254,14 @@
                     <p>Copyright 2021 Hikers.</p>
                 </div>
                 <div class="col-md-6">
-                    <div class="social-right2389"> <a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a> </div>
+                    <div class="social-right2389"> <a href="#"><i class="fa fa-twitter-square"
+                                aria-hidden="true"></i></a> <a href="#"><i class="fa fa-facebook"
+                                aria-hidden="true"></i></a> <a href="#"><i class="fa fa-google-plus"
+                                aria-hidden="true"></i></a> <a href="#"><i class="fa fa-youtube"
+                                aria-hidden="true"></i></a> <a href="#"><i class="fa fa-skype"
+                                aria-hidden="true"></i></a> <a href="#"><i class="fa fa-linkedin"
+                                aria-hidden="true"></i></a> <a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
