--- a/index.html
+++ b/index.html
@@ -43,16 +43,15 @@
 
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
                             <ul class="dropdown-menu animated zoomIn">
-                                <li><a href="logIn.html">Login</a></li>
-                                <li><a href="contact_us.html"> Contact Us</a></li>
+                                <li><a href="contact-us.html"> Contact Us</a></li>
                                 <li><a href="post-thread.html"> Post Thread </a></li>
                                 <li><a href="post-deatils.html"> Post-Details </a></li>
                                 <li><a href="user.html">All User</a></li>
-                                <li><a href="user_question.html"> User Question </a></li>
+                                <li><a href="user-details.html"> User Question </a></li>
                                 <li><a href="category.html"> Category </a></li>
                             </ul>
                         </li>
-                        <li><a href="contact_us.html">Contact us</a></li>
+                        <li><a href="contact-us.html"> Contact Us</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
