feat: update index and threads

--- a/post-deatils.html
+++ b/post-deatils.html
@@ -65,7 +65,7 @@
             <ol class="breadcrumb breadcrumb839">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Post Details</a></li>
-                <li class="active">This Is My first Question</li>
+                <li class="active">Seeking App that tracks Hike & prevents getting lost</li>
             </ol>
         </div>
     </section>
@@ -78,7 +78,7 @@
                             <div class="row">
                                 <div class="col-md-8">
                                     <div class="post-title-left129">
-                                        <h3>This Is My first Question</h3>
+                                        <h3>Seeking App that tracks Hike & prevents getting lost</h3>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
@@ -89,20 +89,13 @@
                             </div>
                         </div>
                         <div class="post-details-info1982">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi adipiscing gravida odio,
-                                sit amet suscipit risus ultrices eu. Fusce viverra neque at purus laoreet consequat.
-                                Vivamus vulputate posuere nisl quis consequat. Donec congue commodo mi, sed commodo
-                                velit fringilla ac. Fusce placerat venenatis mi. Pellentesque habitant morbi tristique
-                                senectus et netus et malesuada fames ac turpis egestas. Cras ornare, dolor a aliquet
-                                rutrum, dolor turpis condimentum leo, a semper lacus purus in felis. Quisque blandit
-                                posuere turpis, eget auctor felis pharetra eu .</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi adipiscing gravida odio,
-                                sit amet suscipit risus ultrices eu. Fusce viverra neque at purus laoreet consequat.
-                                Vivamus vulputate posuere nisl quis consequat. Donec congue commodo mi, sed commodo
-                                velit fringilla ac. Fusce placerat venenatis mi. Pellentesque habitant morbi tristique
-                                senectus et netus et malesuada fames ac turpis egestas. Cras ornare, dolor a aliquet
-                                rutrum, dolor turpis condimentum leo, a semper lacus purus in felis. Quisque blandit
-                                posuere turpis, eget auctor felis pharetra eu .</p>
+                            <p>Hello friends, <br> <br>
+
+                                Is there such thing as an app that can track your path while hiking, so you can use it
+                                to assist in navigating your way back if you get confused? I'm thinking such an app
+                                would be invaluable to prevent people from getting lost. It seems like a GPS app could
+                                easily include this feature, since gps is already continually monitoring your position.
+                            </p>
                             <hr>
                             <div class="post-footer29032">
                                 <div class="l-side2023"> <i class="fa fa-check check2" aria-hidden="true"> solved</i> <a
@@ -291,10 +284,10 @@
                     <div class="categori-part329">
                         <h4>Category</h4>
                         <ul>
-                            <li><a href="#">web developer</a></li>
-                            <li><a href="#">Andriod developer</a></li>
-                            <li><a href="#">grapics developer</a></li>
-                            <li><a href="#">web developer</a></li>
+                           <li><a href="#">Discussion</a></li>
+                           <li><a href="#">Guidance</a></li>
+                           <li><a href="#">Experiences</a></li>
+                           <li><a href="#">Question</a></li>
                         </ul>
                     </div>
 
