--- a/user.html
+++ b/user.html
@@ -143,10 +143,10 @@
                     <div class="categori-part329">
                         <h4>Category</h4>
                         <ul>
-                            <li><a href="#">web developer</a></li>
-                            <li><a href="#">Andriod developer</a></li>
-                            <li><a href="#">grapics developer</a></li>
-                            <li><a href="#">web developer</a></li>
+                            <li><a href="#">Discussion</a></li>
+                            <li><a href="#">Guidance</a></li>
+                            <li><a href="#">Experiences</a></li>
+                            <li><a href="#">Question</a></li>
                         </ul>
                     </div>
 
