fx: fix post detail layouts, fix contact us layout, add ability to logout, other adjustments

--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
                             </ul>
                         </li>
                         <li><a href="contact-us.html"> Contact Us</a></li>
+                        <li> <a href="#" class="profile-icon" data-toggle="dropdown" role="button"
+                            aria-haspopup="true" aria-expanded="false">
+                                <img src="image/images.png" alt="image"> 
+                                <span class="caret"></span></a>
+                            <ul class="dropdown-menu animated zoomIn">
+                                <li><a href="threads.html"> Profile </a></li>
+                                <li><a href="logIn.html"> Log Out </a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -87,7 +96,7 @@
                             placeholder="Search discussion or topics">
                         <span class="input-group-addon"
                             style="border-top-right-radius: 10px; border-bottom-right-radius: 10px;">
-                            <a href="#">Search</a>
+                            <a href="threads.html">Search</a>
                         </span>
                     </div>
                 </div>
