--- a/post-thread.html
+++ b/post-thread.html
@@ -57,6 +57,15 @@
                             </ul>
                         </li>
                         <li><a href="contact-us.html"> Contact Us</a></li>
+                        <li> <a href="#" class="profile-icon" data-toggle="dropdown" role="button"
+                            aria-haspopup="true" aria-expanded="false">
+                                <img src="image/images.png" alt="image"> 
+                                <span class="caret"></span></a>
+                            <ul class="dropdown-menu animated zoomIn">
+                                <li><a href="threads.html"> Profile </a></li>
+                                <li><a href="logIn.html"> Log Out </a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -68,7 +77,7 @@
         <div class="container">
             <h3>Post Thread</h3>
             <ol class="breadcrumb breadcrumb839">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li class="active">Post Thread</li>
             </ol>
         </div>
