feat: add your route page, many minor overhaul, view map layout fixes

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <ul class="nav navbar-nav"> </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
+                        <li><a href="your-routes.html">Your Routes</a></li>
                         <li><a href="post-thread.html"> Post Thread </a></li>
                         <li><a href="threads.html">Threads</a></li>
 
