--- a/user.html
+++ b/user.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="Ask online Form">
+    <meta name="title" content="Hikers">
     <meta name="description"
-        content="The Ask is a bootstrap design help desk, support forum website template coded and designed with bootstrap Design, Bootstrap, HTML5 and CSS. Ask ideal for wiki sites, knowledge base sites, support forum sites">
-    <meta name="keywords"
-        content="HTML, CSS, JavaScript,Bootstrap,js,Forum,webstagram ,webdesign ,website ,web ,webdesigner ,webdevelopment">
+        content="Hikers is an online portal forum for hikers and mountain adventurers with the addition of saving your hiking routes via Google Maps and share it with everyone">
+    <meta name="keywords" content="hiking, community, forum, hiking-route, hiking-planner">
     <meta name="robots" content="index, nofollow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
@@ -40,6 +39,7 @@
                     <ul class="nav navbar-nav"> </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
+                        <li><a href="your-routes.html">Your Routes</a></li>
                         <li><a href="post-thread.html"> Post Thread </a></li>
                         <li><a href="threads.html">Threads</a></li>
 
