--- a/view-map.html
+++ b/view-map.html
@@ -40,6 +40,7 @@
                     <ul class="nav navbar-nav"> </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
+                        <li><a href="your-routes.html">Your Routes</a></li>
                         <li><a href="post-thread.html"> Post Thread </a></li>
                         <li><a href="threads.html">Threads</a></li>
 
@@ -71,9 +72,27 @@
         </nav>
     </div>
 
+    <section class="header-descriptin329">
+        <div class="container">
+            <h3>View Map Route</h3>
+            <ol class="breadcrumb breadcrumb839">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="your-routes.html">Your Routes</a></li>
+                <li class="active">Adirondack Mountain Range Route</li>
+            </ol>
+        </div>
+    </section>
+
     <!-- ======content section/body=====-->
     <section class="main-content920">
         <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="map-detail">
+                        <h1 style="font-weight: bold;">Route Name : Adirondack Mountain Range Route</h1>
+                    </div>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-md-12">
                     <div id="map">
@@ -82,6 +101,19 @@
                             allowfullscreen>
                         </iframe>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5 map-buttons">
+                    <a href="#" class="btn btn-success">
+                        Edit Route
+                    </a>
+                    <a href="#" class="btn btn-success">
+                        Rename Route
+                    </a>
+                    <a href="#" class="btn btn-danger">
+                        Delete Route
+                    </a>
                 </div>
             </div>
         </div>
