--- a/your-routes.html
+++ b/your-routes.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="index, nofollow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <title>Hikers - Post Thread</title>
+    <title>Hikers - Your Routes</title>
     <link rel="icon" href="image/logo.png" type="image/png" sizes="16x16">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -20,10 +20,9 @@
     <!-- <link href="css/animate.css" rel="stylesheet" type="text/css"> -->
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
-<link href="css/responsive.css" rel="stylesheet" type="text/css">
-</head>
 
 <body>
+    <!-- ==========header mega navbar=======-->
     <div class="top-menu-bottom932">
         <nav class="navbar navbar-default">
             <div class="container">
@@ -44,21 +43,19 @@
                         <li><a href="your-routes.html">Your Routes</a></li>
                         <li><a href="post-thread.html"> Post Thread </a></li>
                         <li><a href="threads.html">Threads</a></li>
-
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                 aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
                             <ul class="dropdown-menu animated zoomIn">
                                 <li><a href="threads.html"> Threads </a></li>
                                 <li><a href="post-thread.html"> Post Thread </a></li>
-                                <li><a href="post-deatils.html"> Post-Details </a></li>
                                 <li><a href="user.html">All User</a></li>
                                 <li><a href="user-details.html"> User Details </a></li>
                                 <li><a href="contact-us.html"> Contact Us</a></li>
                             </ul>
                         </li>
                         <li><a href="contact-us.html"> Contact Us</a></li>
-                        <li> <a href="#" class="profile-icon" data-toggle="dropdown" role="button"
-                            aria-haspopup="true" aria-expanded="false">
+                        <li> <a href="#" class="profile-icon" data-toggle="dropdown" role="button" aria-haspopup="true"
+                                aria-expanded="false">
                                 <img src="image/images.png" alt="image">
                                 <span class="caret"></span></a>
                             <ul class="dropdown-menu animated zoomIn">
@@ -73,64 +70,80 @@
             <!-- /.container-fluid -->
         </nav>
     </div>
+    <!--    breadcumb of category -->
     <section class="header-descriptin329">
         <div class="container">
-            <h3>Post Thread</h3>
+            <h3>Threads</h3>
             <ol class="breadcrumb breadcrumb839">
                 <li><a href="index.html">Home</a></li>
-                <li class="active">Post Thread</li>
+                <li class="active">Your Routes</li>
             </ol>
         </div>
     </section>
+    <!--    body content-->
     <section class="main-content920">
         <div class="container">
             <div class="row">
-                <div class="col-md-9">
-                    <div class="ask-question-input-part032">
-                        <h4>Post Thread</h4>
+                <div class="col-md-8">
+                    <section class="category2781">
+                        <h1 style="font-weight: bolder;">Your Saved Routes</h1>
                         <hr>
-                        <form action="index.html" method="POST" onsubmit="return ask_question(event)">
-                            <div id="response">
-                                <p></p>
-                            </div>
-                            <div class="question-title39">
-                                <span class="form-description433">Question-Title* </span>
-                                <input type="text" name="fname" class="question-ttile32"
-                                    placeholder="Write Your Question Title">
-                            </div>
-
-                            <div class="categori49">
-                                <span class="form-description43305">Category* </span>
-                                <input list="browsers" name="category-choose" id="category-choose"
-                                    class="list-category53" placeholder="Category">
-                                <datalist id="browsers">
-                                    <option value="Discussion">
-                                    <option value="Guidance">
-                                    <option value="Experiences">
-                                    <option value="Question">
-                                </datalist>
-                            </div>
-
-                            <div class="button-group-addfile3239">
-                                <span class="form-description23993">Attachment</span><input type="file" name="ffile"
-                                    class="question-ttile3226">
-
-                            </div>
-                            <div class="details2-239">
-                                <div class="col-md-12 nopadding">
-                                    <textarea id="txtEditor"></textarea>
+                        <div class="map-route-items">
+                            <div class="row">
+                                <div class="col-md-10">
+                                    <div onclick="location.href='view-map.html';">
+                                        <div class="map-route-title">
+                                            <h3><a href="view-map.html">Adirondack Mountain Range Route</a></h3>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                    <div class="ques-icon-info3293">
+                                        <a href="#"><i class="fa fa-star" aria-hidden="true"> Favorite </i> </a>
+                                        <a href="#"><i class="fa fa-share-alt" aria-hidden="true"> Share</i></a>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="publish-button2389">
-                                <button type="submit" class="publis1291">Publish Thread</button>
+                        </div>
+
+                        <div class="map-route-items">
+                            <div class="row">
+                                <div class="col-md-10">
+                                    <div onclick="location.href='view-map.html';">
+                                        <div class="map-route-title">
+                                            <h3><a href="view-map.html">Mount Gede Fun Hike Route</a></h3>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                    <div class="ques-icon-info3293">
+                                        <a href="#"><i class="fa fa-star" aria-hidden="true"> Favorite </i> </a>
+                                        <a href="#"><i class="fa fa-share-alt" aria-hidden="true"> Share</i></a>
+                                    </div>
+                                </div>
                             </div>
-                        </form>
-                    </div>
+                        </div>
 
+                        <div class="map-route-items">
+                            <div class="row">
+                                <div class="col-md-10">
+                                    <div onclick="location.href='view-map.html';">
+                                        <div class="map-route-title">
+                                            <h3><a href="view-map.html">The Alps Challenger Route</a></h3>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                    <div class="ques-icon-info3293">
+                                        <a href="#"><i class="fa fa-star" aria-hidden="true"> Favorite </i> </a>
+                                        <a href="#"><i class="fa fa-share-alt" aria-hidden="true"> Share</i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </div>
-                <!--                end of col-md-9 -->
+                <!-- end of col-md-9 -->
+                <div class="col-md-1"></div>
 
-                <!--           strart col-md-3 (side bar)-->
+                <!--strart col-md-3 (side bar)-->
                 <aside class="col-md-3 sidebar97239">
                     <div class="categori-part329">
                         <h4>Category</h4>
@@ -191,7 +204,6 @@
             </div>
         </div>
     </section>
-
     <!--    footer -->
     <div class="footer-search">
         <div class="container">
@@ -214,8 +226,8 @@
                 <div class="col-md-6">
                     <div class="info-part-one320">
                         <h4>What is Hikers ?</h4>
-                        <p>Hikers is an web application that resembles a portal for mountaineers to provide information
-                            to
+                        <p>Hikers is an web application that resembles a portal for mountaineers to provide
+                            information to
                             each other about things related to hiking. In addition to the community portal, the app
                             offers a hiking route planner.
                         </p>
@@ -283,20 +295,7 @@
         $(document).ready(function () {
             $("#txtEditor").Editor();
         });
-
-        // $('#btn_submit').click((event) => {
-        //     alert("Success post your question!");
-        //     location.replace("http://127.0.0.1:5500/");
-        // })
-
-        function ask_question(event) {
-            event.preventDefault();
-
-            alert("Success post your thread!");
-            location.replace("http://127.0.0.1:5500/");
-        }
     </script>
-
 </body>
 
 </html>
